--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.0.7
   form_field_validator: ^1.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
