--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.test_point_system">
+    package="com.example.collecting_points">
    <application
-        android:label="test_point_system"
+        android:label="collecting_points"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
