--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   fluttertoast: ^8.0.7
   form_field_validator: ^1.1.0
   intl: ^0.17.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
