--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   form_field_validator: ^1.1.0
   intl: ^0.17.0
   provider: ^5.0.0
+  sembast: ^3.1.0+2
+  path_provider: ^2.0.2
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
